# DiscountPy

./: Discount In Python.ipynb  Discount in Python.ipynb  LICENSE  README.md  pyproject.toml
Discount/: pyproject.toml
Discount/data/: small.fasta
Discount/discountpy/: __init__.py  motif_counter.py  motif_extracter.py  motif_space.py
Discount/notebook/: 100k_freq.txt  100k_freq2.txt  100k_freq3.txt  Discount In Python.ipynb  freq.txt  ufreq.txt
Discount/output/: out.txt
Discount/src/: __init__.py  coreConfig.py  counting.py  readSplitDemo.py
Discount/stats/: 100k_time.txt  10k_time.txt  counting.py
Discount/tests/: test_counting.py
data/: testData.fasta
discountPy/: discount.py  miniPASHA.txt
discountPy/data/: testData.fasta
discountpy/: motif.py  motif_count_scanner.py  motif_counter.py  motif_space.py  pos_rank_window.py  shift_scanner.py
discountpy/utils/: BitRepresentation.py  DNAHelpers.py  NTBitArray.py  Untitled-1.py  Untitled-2.py
notebook/: Discount In Python.ipynb
src/: __init__.py  color.py  coreConfig.py  counting.py  readSplitDemo.py
tests/: test_counting.py  test_discountpy.py
