[tool.poetry]
name = "discountPy"
version = "0.1.0"
description = "A k-mer counting tool"
license = "MIT"
authors = ["Umesh-JNU <umesh98_soe@jnu.ac.in>"]
readme = 'README.md'
repository = "https://github.com/Umesh-JNU/DiscountPy"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
line-profiler = "^3.3.0"
matplotlib = "^3.4.2"
pyspark = "^3.1.2"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
discount = "src:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
