[tool.poetry]
name = "discountPy"
version = "0.1.0"
description = ""
authors = ["Umesh-JNU <umesh98_soe@jnu.ac.in>"]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
discount = "src:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
